# apps/api/internal/models/agent.go
@@ -7,19 +7,18 @@ import (
 	"github.com/komiklab/komik/internal/utils"
 )
 
-
 //TODO: Do a proper validation[KOM-20]
 
 type Agent struct {
-	Id           uuid.UUID                             `json:"id" gorm:"type:uuid;primaryKey;default:uuid_generate_v4()"`
-	CreatedAt    int64                                 `json:"createdAt" gorm:"autoCreateTime"`
-	UpdatedAt    int64                                 `json:"updatedAt" gorm:"autoUpdateTime"`
-	Description  string                                `json:"description" gorm:"null"`
-	Name         string                                `json:"name"  valid:"required" gorm:"not null"`
-	Endpoint     string                                `json:"endpoint" gorm:"not null"`
-	Capabilities []string                              `json:"capabilities" gorm:"type:jsonb;serializer:json;not null"`
-	Parameter    []apidefn.AgentCreateRequestParameter `json:"parameter" gorm:"type:jsonb;serializer:json;not null"`
-	Tags         *[]string                             `json:"tags" gorm:"type:jsonb;serializer:json;not null"`
+	Id          uuid.UUID                             `json:"id" gorm:"type:uuid;primaryKey;default:uuid_generate_v4()"`
+	CreatedAt   int64                                 `json:"createdAt" gorm:"autoCreateTime"`
+	UpdatedAt   int64                                 `json:"updatedAt" gorm:"autoUpdateTime"`
+	Description string                                `json:"description" gorm:"null"`
+	Name        string                                `json:"name"  valid:"required" gorm:"not null"`
+	Endpoint    string                                `json:"endpoint" gorm:"not null"`
+	TriggeredBy []string                              `json:"triggeredBy" gorm:"type:jsonb;serializer:json;not null"`
+	Parameter   []apidefn.AgentCreateRequestParameter `json:"parameter" gorm:"type:jsonb;serializer:json;not null"`
+	Tags        *[]string                             `json:"tags" gorm:"type:jsonb;serializer:json;not null"`
 }
 
 // type Resources struct {
@@ -41,13 +40,13 @@ type ListAgents struct {
 
 func NewAgentFromApiDefn(req apidefn.AgentCreateRequest) (*Agent, error) {
 	agent := &Agent{
-		Id:           uuid.New(),
-		Description:  req.Description,
-		Endpoint:     req.Endpoint,
-		Capabilities: req.Capabilities,
-		Parameter:    req.Parameters,
-		Tags:         req.Tags,
-		Name:         req.Name,
+		Id:          uuid.New(),
+		Description: req.Description,
+		Endpoint:    req.Endpoint,
+		TriggeredBy: req.TriggeredBy,
+		Parameter:   req.Parameters,
+		Tags:        req.Tags,
+		Name:        req.Name,
 	}
 	valid, err := govalidator.ValidateStruct(agent)
 	if !valid {
